Changed cmd-handler, added missing a gitignore, custom implementations and readme

--- a/TGC.DatabaseMigration.Migrations/TGC.DatabaseMigration.Migrations.csproj
+++ b/TGC.DatabaseMigration.Migrations/TGC.DatabaseMigration.Migrations.csproj
@@ -11,4 +11,8 @@
 		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	</EmbeddedResource>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\Templates\" />
+  </ItemGroup>
 </Project>
