--- a/TGC.DatabaseMigration.Runner/TGC.DatabaseMigration.Runner.csproj
+++ b/TGC.DatabaseMigration.Runner/TGC.DatabaseMigration.Runner.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TGC.DatabaseMigration.DBUpWrapper\TGC.DatabaseMigration.DBUpWrapper.csproj" />
     <ProjectReference Include="..\TGC.DatabaseMigration.EvolveWrapper\TGC.DatabaseMigration.EvolveWrapper.csproj" />
   </ItemGroup>
